Bug 1678136 - Lazily initialize SyncObject r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D97946